# react-native-skia

./: .buckconfig  .gitignore  .gn  BUILD.gn  DEPS  LICENSE  README.md  package.json  pull_request_template.md
ReactSkia/: BUCK  BUILD.gn  ComponentViewRegistry.cpp  ComponentViewRegistry.h  JSITurboModuleManager.cpp  JSITurboModuleManager.h  LegacyNativeModuleRegistry.cpp  LegacyNativeModuleRegistry.h  MountingManager.cpp  MountingManager.h  RNInstance.cpp  RNInstance.h  RSkCodegenConf.json  RSkSurfaceDelegate.h  RSkSurfaceWindow.cpp  RSkSurfaceWindow.h  RSkThirdPartyFabricComponentsProvider.cpp  RSkThirdPartyFabricComponentsProvider.h  RSkThirdPartyNativeModuleProvider.cpp  RSkThirdPartyNativeModuleProvider.h  ReactSkiaApp.cpp  ReactSkiaApp.h  SimpleViewApp.js  UIManagerModule.cpp  UIManagerModule.h  version.h
ReactSkia/LegacyNativeModules/: LegacyNativeModule.cpp  LegacyNativeModule.h  LegacyNativeModuleRegistry.cpp  LegacyNativeModuleRegistry.h  NativeEventEmitter.cpp  NativeEventEmitter.h  RSkBaseEventEmitter.cpp  RSkBaseEventEmitter.h
ReactSkia/LegacyNativeModules/uimanager/: UiManagerModule.cpp  UiManagerModule.h
ReactSkia/components/: RSkComponent.cpp  RSkComponent.h  RSkComponentActivityIndicator.cpp  RSkComponentActivityIndicator.h  RSkComponentActivityIndicatorManager.cpp  RSkComponentActivityIndicatorManager.h  RSkComponentImage.cpp  RSkComponentImage.h  RSkComponentProvider.h  RSkComponentProviderActivityIndicator.cpp  RSkComponentProviderActivityIndicator.h  RSkComponentProviderImage.cpp  RSkComponentProviderImage.h  RSkComponentProviderRootView.cpp  RSkComponentProviderRootView.h  RSkComponentProviderSafeAreaView.cpp  RSkComponentProviderSafeAreaView.h  RSkComponentProviderScrollView.cpp  RSkComponentProviderScrollView.h  RSkComponentProviderText.cpp  RSkComponentProviderText.h  RSkComponentProviderTextInput.cpp  RSkComponentProviderTextInput.h  RSkComponentProviderUnimplementedView.cpp  RSkComponentProviderUnimplementedView.h  RSkComponentProviderView.cpp  RSkComponentProviderView.h  RSkComponentRootView.cpp  RSkComponentRootView.h  RSkComponentSafeAreaView.cpp  RSkComponentSafeAreaView.h  RSkComponentScrollView.cpp  RSkComponentScrollView.h  RSkComponentText.cpp  RSkComponentText.h  RSkComponentTextInput.cpp  RSkComponentTextInput.h  RSkComponentUnimplementedView.cpp  RSkComponentUnimplementedView.h  RSkComponentView.cpp  (+6 more)
ReactSkia/core_modules/: Alert.h  RSkAlertManager.cpp  RSkAlertManager.h  RSkAppStateModule.cpp  RSkAppStateModule.h  RSkDeviceInfo.cpp  RSkDeviceInfo.h  RSkEventEmitter.cpp  RSkEventEmitter.h  RSkImageLoader.cpp  RSkImageLoader.h  RSkInputEventManager.cpp  RSkInputEventManager.h  RSkKeyboardObserver.cpp  RSkKeyboardObserver.h  RSkPlatform.cpp  RSkPlatform.h  RSkSpatialNavigator.cpp  RSkSpatialNavigator.h  RSkSpatialNavigatorContainer.cpp  RSkSpatialNavigatorContainer.h  RSkTimingModule.cpp  RSkTimingModule.h
ReactSkia/modules/: RSkNetworkingModuleBase.cpp  RSkNetworkingModuleBase.h  RSkTVNavigationEventEmitter.cpp  RSkTVNavigationEventEmitter.h  RSkWebSocketModuleBase.cpp  RSkWebSocketModuleBase.h
ReactSkia/platform/common/: RuntimeEventBeat.cpp  RuntimeEventBeat.h
ReactSkia/platform/linux/: MainRunLoopEventBeat.cpp  MainRunLoopEventBeat.h  RCTUtils.h  RSkSurfaceDelegateLinux.cpp  RSkSurfaceDelegateLinux.h  RuntimeEventBeat.cpp  RuntimeEventBeat.h
ReactSkia/platform/mac/: MainRunLoopEventBeat.mm  RCTSurfaceTouchHandler.h  RCTSurfaceTouchHandler.mm  RCTUtils.h  RCTUtils.mm  RSkSurfaceDelegateMac.h  RSkSurfaceDelegateMac.mm
ReactSkia/platform/macosx/: MainRunLoopEventBeat.mm
ReactSkia/pluginfactory/: Export.h  RnsPlugin.h  RnsPluginFactory.cpp  RnsPluginFactory.h  Version.h
ReactSkia/pluginfactory/interfaces/: RNSApplicationManagerInterface.cpp  RNSApplicationManagerInterface.h  RNSPlatformManagerInterface.cpp  RNSPlatformManagerInterface.h
ReactSkia/pluginfactory/plugins/: BUILD.gn  plugins.gni
ReactSkia/scripts/assetManager/: RSkAssetMapGen.py
ReactSkia/scripts/buildgngen/: RSkBuildGen.py  RSkGenerateExternalBuildGn.py
ReactSkia/scripts/codegen/: RSkCodeGen.py  RSkGenerateThirdPartyFabricComponentsProviderCpp.py  RSkGenerateThirdPartyFabricComponentsProviderH.py  RSkGenerateThirdPartyNativeModulesCpp.py  RSkGenerateThirdPartyNativeModulesH.py  RSkGenerateThirdPartyViewConfigManagerCpp.py
ReactSkia/sdk/: .OnScreenKeyBoard.cpp.swp  Alert.cpp  Alert.h  CurlNetworking.cpp  CurlNetworking.h  FollyTimer.cpp  FollyTimer.h  NopollWebsocket.cpp  NopollWebsocket.h  NotificationCenter.cpp  NotificationCenter.h  OSKConfig.h  OSKLayout.h  OnScreenKeyBoard.cpp  OnScreenKeyBoard.h  RNSAssetManager.cpp  RNSAssetManager.h  RNSKeyCodeMapping.h  ThreadSafeCache.h  ThreadSafeQueue.h  WindowDelegator.cpp  WindowDelegator.h  sdkStyleConfig.h  sdkStylesConfig.h
ReactSkia/textlayoutmanager/: RSkTextLayoutManager.cpp  RSkTextLayoutManager.h
ReactSkia/utils/: AppLog.h  RnsJsRaf.cpp  RnsJsRaf.h  RnsLog.h  RnsUtils.h
ReactSkia/views/common/: RSkConversion.h  RSkDrawUtils.cpp  RSkDrawUtils.h  RSkImageCacheManager.cpp  RSkImageCacheManager.h  RSkImageUtils.cpp  RSkImageUtils.h  RSkSdkConversion.h  RSkTextUtils.cpp  RSkTextUtils.h
rns_shell/: BUILD.gn  rns_shell.gni
rns_shell/common/: Application.cpp  Application.h  DisplayParams.h  Performance.cpp  Performance.h  RasterWindowContext.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h
rns_shell/compositor/: Compositor.cpp  Compositor.h  LayerTreeHost.cpp  LayerTreeHost.h  RendererDelegate.cpp  RendererDelegate.h
rns_shell/input/: BUILD.gn  InputEventDelegate.h  MouseWheelEvent.h  export.h
sk_app/: Application.h  BUILD.gn  GLWindowContext.cpp  GLWindowContext.h  SkAppUtil.h  Window.cpp  Window.h  WindowContext.cpp  WindowContext.h
sk_app/mac/: GLWindowContext_mac.mm  RasterWindowContext_mac.mm  WindowContextFactory_mac.h  Window_mac.h  Window_mac.mm  main_mac.mm
sk_app/unix/: GLWindowContext_unix.cpp  RasterWindowContext_unix.cpp  Window_unix.cpp  keysym2ucs.c  main_unix.cpp
third-party-oss/double-conversion/: BUCK  BUILD.gn
third-party-oss/glog/: BUCK  BUILD.gn
(+2058 files in other folders)
